--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 logging.level.org.springframework.data.r2dbc = DEBUG
 logging.level.de.thm.mni = DEBUG
+logging.level.sql = DEBUG
 
 spring.r2dbc.url=r2dbc:pool:postgres://postgres:5432/dev
 spring.r2dbc.username=dev
 spring.r2dbc.password=password
 spring.r2dbc.initialization-mode=always
+
+server.port=8083
