Added activemq config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.r2dbc.password=password
 spring.r2dbc.initialization-mode=always
 
 server.port=8083
+
+spring.activemq.broker-url=tcp://activemq:61616
+spring.activemq.user=amq
+spring.activemq.password=amq
+spring.jms.pub-sub-domain=true
