--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.activemq.broker-url=tcp://activemq:61616
 spring.activemq.user=amq
 spring.activemq.password=amq
 spring.jms.pub-sub-domain=true
+
+management.metrics.export.influx.uri=http://influx:8086
+management.metrics.export.influx.db=userService
+management.metrics.export.influx.password=PASSWORD
+management.metrics.export.influx.user-name=admin
+management.metrics.enable.all=true
