--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     environment:
       - POSTGRES_USER=dev
       - POSTGRES_PASSWORD=password
+    ports:
+    - 5432:5432
     volumes:
       - /var/lib/postgresql/data
       # copy the sql script to create tables
