--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,10 @@ services:
       dockerfile: Dockerfile
     ports:
     - 8083:8083
+    environment:
+      - DB_HOST
+      - INFLUX_HOST
+      - ACTIVEMQ_HOST
     volumes:
       - /data/user-service
     networks:
