--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,19 @@ logging.level.org.springframework.data.r2dbc = DEBUG
 logging.level.de.thm.mni = DEBUG
 logging.level.sql = DEBUG
 
-spring.r2dbc.url=r2dbc:pool:postgres://localhost:5432/dev
+spring.r2dbc.url=r2dbc:pool:postgres://${DB_HOST:user-db}:5432/dev
 spring.r2dbc.username=dev
 spring.r2dbc.password=password
 spring.r2dbc.initialization-mode=always
 
 server.port=8083
 
-spring.activemq.broker-url=tcp://activemq:61616
+spring.activemq.broker-url=tcp://${ACTIVEMQ_HOST:activemq}:61616
 spring.activemq.user=amq
 spring.activemq.password=amq
 spring.jms.pub-sub-domain=true
 
-management.metrics.export.influx.uri=http://influx:8086
+management.metrics.export.influx.uri=http://${INFLUX_HOST:influx}:8086
 management.metrics.export.influx.db=userService
 management.metrics.export.influx.password=PASSWORD
 management.metrics.export.influx.user-name=admin
