--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-logging.level.org.springframework.data.r2dbc = DEBUG
-logging.level.de.thm.mni = DEBUG
-logging.level.sql = DEBUG
+logging.level.org.springframework.data.r2dbc = INFO
+logging.level.de.thm.mni = INFO
+logging.level.sql = INFO
 
 spring.r2dbc.url=r2dbc:pool:postgres://${DB_HOST:user-db}:5432/dev
 spring.r2dbc.username=dev
